[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/environment/socket/Socket.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/HealthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/environment/socket/Socket.gd" type="Script" id=3]
[ext_resource path="res://assets/customNodes/InteractionableBox.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 77, 70 )

[node name="Socket" type="Node2D"]
script = ExtResource( 3 )
startEnergy = 0.0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 5, -137 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="HealthBar" parent="." instance=ExtResource( 2 )]
margin_left = -7.0
margin_top = 36.0
margin_right = 93.0
margin_bottom = 56.0
rect_rotation = -89.9999
rect_scale = Vector2( 0.75, 0.75 )

[node name="InteractionableBox" type="Area2D" parent="."]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionableBox"]
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -70 )

[connection signal="healthReachedMax" from="HealthBar" to="." method="_on_HealthBar_healthReachedMax"]
[connection signal="healthReachedZero" from="HealthBar" to="." method="_on_HealthBar_healthReachedZero"]
